fix misalignments

--- a/web_src/less/_base.less
+++ b/web_src/less/_base.less
@@ -853,6 +853,12 @@ a.commit-statuses-trigger {
   color: var(--color-text);
 }
 
+.ui.list > .item > img.ui.avatar + .content {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 0.5em;
+}
+
 .ui.list .list > .item .description,
 .ui.list > .item .description {
   color: var(--color-text);
