--- a/web_src/less/_explore.less
+++ b/web_src/less/_explore.less
@@ -78,6 +78,8 @@
     img.ui.avatar {
       width: 40px;
       height: 40px;
+      display: inline-block;
+      vertical-align: top;
     }
 
     .description {
