--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -756,6 +756,10 @@
           align-items: center;
         }
 
+        .review-item-left .reviewer-info {
+          margin-left: 0.25em;
+        }
+
         .text {
           margin: .3em 0 .5em .5em;
         }
